@@ -60,13 +60,3 @@
  - Update Gem when installing Rails
 	- http://intertwingly.net/blog/2008/11/23/RubyGems-1-3-1-on-Ubuntu-8-10
 
- - Email addresses for forwarding spam to, for black/white listing
-	- Also updates bayes DB?
-	- FS#4947
-	- Implement as file aliases that spam delivered to, which are regularly
-	  processed by cron jobs
-		- Spam filtering off for users
-		- Clear mail when processing
-		- Needs to parse real mail out of forwarded message
-		- Only allow mail from same domain
-		- Update bayes auto-whitelist DB!
