@@ -166,3 +166,5 @@ nodeniedssh=0
 web_webmail=1
 web_admin=1
 spam_lock=0
+spam_trap_black=0
+ham_trap_white=0
